...
                        if isFavorite == false {
                            Button() {
                                FavoriteFruit.favorites[fruit.id] = true
                                isFavorite = true
                                UserDefaults.standard.set(FavoriteFruit.favorites[fruit.id], forKey: "\(fruit.id)")
                            } label: {
                                Label("Ajouter aux favoris", systemImage: "star")
                                    .frame(height: 20)
                                    .foregroundColor(colorScheme == .dark ? .white : .purple)
                                    .padding()
                                    .background(colorScheme == .dark ? .purple : .white)
                                    .clipShape(RoundedRectangle(cornerRadius: 100))
                            }
                        } else {
                            Button() {
                                FavoriteFruit.favorites[fruit.id] = false
                                isFavorite = false
                                UserDefaults.standard.set(FavoriteFruit.favorites[fruit.id], forKey: "\(fruit.id)")
                            } label: {
                                Label("Retirer des favoris", systemImage: "star.fill")
                                    .frame(height: 20)
                                    .foregroundColor(colorScheme == .dark ? .white : .purple)
                                    .padding()
                                    .background(colorScheme == .dark ? .purple : .white)
                                    .clipShape(RoundedRectangle(cornerRadius: 100))
                            }
...
