...
    "cart.badge.plus",
    "camera",
    ]
    
    let names = [
    "Fruit List",
    "Shopping List",
    "Fruit Recognition"
    ]
    
    var body: some View {
        VStack {
            ZStack {
...
