...
    
    @Environment(\.colorScheme) var colorScheme

    // MARK: - searchBar
    var searchBar: some View {
        HStack {
            TextField("Add an ingredient", text: self.$newIngredient)
                .padding(.leading, 20)
                .frame(height: 40)
                .background(colorScheme == .dark ? Color(UIColor.white).opacity(0.2) : Color(UIColor.lightGray).opacity(0.2))
                .clipShape(RoundedRectangle(cornerRadius: 100))
            Button(action: addIngredient, label: {
                Image(systemName: "plus")
...
